--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,22 @@
 <h1>Make your form here</h1>
+<form method = 'post' action='/pirates'>
+  <label>Pirate Name:</label>
+  <input type='text' name="pirate[name]">
+  <label> Weight:</label>
+  <input type ="text" name ="pirate[weight]">
+  <label> Height:</label>
+  <input type = "text" name = "pirate[height]">
+  <label> Ship Name:</label>
+  <input type = "text" id = "ship_name_1" name = "pirate[ships][][name]">
+  <label> Ship Type:</label>
+  <input type = "text" id = "ship_type_1"name = "pirate[ships][][type]">
+  <label> Ship Booty:</label>
+  <input type = "text" id = "ship_booty_1"name = "pirate[ships][][booty]">
+  <label> Second Ship Name:</label>
+  <input type = "text" id = "ship_name_2"name = "pirate[ships][][name]">
+  <label> Ship Type:</label>
+  <input type = "text" id = "ship_type_2" name = "pirate[ships][][type]">
+  <label> Ship Booty:</label>
+  <input type = "text" id = "ship_booty_2"name = "pirate[ships][][booty]">
+  <input type = 'submit' value ='Submit' id='Submit' name='submit'>
+</form>
